Message: Fix rounded corners on small media (#2196)

--- a/src/components/middle/message/Message.scss
+++ b/src/components/middle/message/Message.scss
@@ -661,10 +661,6 @@
 
 .media-inner {
   overflow: hidden;
-
-  &.small-image img {
-    border-radius: 0 !important;
-  }
 }
 
 .Message .custom-shape .message-action-button {
